# hs-misc

./: LICENSE.txt
cliff/: CHANGELOG.md  cliff.cabal
cliff/app/: Main.hs
