cabal-version:      2.4
name:               cliff
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
license-file:       LICENSE.txt
author:             Nils Alex
maintainer:         nils@famalex.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cliff
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, hmatrix, MonadRandom, split, containers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2 -Wall
